<?xml version="1.0"?>
<package format="2">
  <name>dyno_bringup</name>
  <version>0.0.0</version>
  <description>The dyno_bringup package</description>

  <maintainer email="samuellindgren91@gmail.com">Samuel Lindgren</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
