<?xml version="1.0"?>
<package format="2">
  <name>dyno_common_rapps</name>
  <version>0.0.0</version>
  <description>The dyno_common_rapps package</description>

  <maintainer email="samuel@dynorobotics.se">Samuel Lindgren</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>frontier_exploration</depend>
  <depend>robot_pose_publisher</depend>

  <export>
    <rocon_app>rapps/exploration/exploration.rapp</rocon_app>
    <rocon_app>rapps/waypoint_navigation/waypoint_navigation.rapp</rocon_app>
    <rocon_app>rapps/route_scheduler/route_scheduler.rapp</rocon_app>
  </export>
</package>
