<?xml version="1.0"?>
<package format="2">
  <name>dyno_description</name>
  <version>0.0.1</version>
  <description>The dyno_description package</description>

  <maintainer email="samuel@dynorobotics.se">Samuel Lindgren</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>

  <depend>gazebo_plugins</depend>
  <depend>hector_gazebo_plugins</depend>

  <export>

  </export>
</package>
