<?xml version="1.0"?>
<package format="2">
  <name>dyno_diagnostics</name>
  <version>0.0.0</version>
  <description>The dyno_diagnostics package</description>

  <maintainer email="samuel@dynorobotics.se">Samuel Lindgren</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>dyno_description</depend>

  <depend>rostest</depend>
  <depend>rosunit</depend>
  <depend>diagnostic_common_diagnostics</depend>
  <depend>diagnostic_updater</depend>

  <export>

  </export>
</package>
