<?xml version="1.0"?>
<package format="2">
  <name>dyno_gazebo</name>
  <version>0.0.1</version>
  <description>The dyno_gazebo package</description>

  <maintainer email="samuel@dynorobotics.se">Samuel Lindgren</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>dyno_description</depend>

  <depend>rostest</depend>
  <depend>rosunit</depend>
  <depend>diagnostic_common_diagnostics</depend>
  <depend>diagnostic_updater</depend>

  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros_control</depend>
  <depend>control_toolbox</depend>

  <export>

  </export>
</package>
