<?xml version="1.0"?>
<package format="2">
  <name>dyno_localization</name>
  <version>0.0.1</version>
  <description>The dyno_navigation package</description>

  <maintainer email="samuel@dynorobotics.se">Samuel Lindgren</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>tf</depend>
  <depend>roscpp</depend>

  <depend>cartographer_ros</depend>

  <depend>move_base</depend>
  <depend>twist_mux</depend>

  <depend>map_server</depend>

  <export>
  </export>
</package>
