<?xml version="1.0"?>
<package format="2">
  <name>dyno_msgs</name>
  <version>0.0.0</version>
  <description>The dyno_msgs package</description>

  <maintainer email="samuel@dynorobotics.se">Samuel Lindgren</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib_msgs</depend>

  <export>

  </export>
</package>
