<?xml version="1.0"?>
<package format="2">
  <name>dyno_quadrotor_rapps</name>
  <version>0.0.0</version>
  <description>The dyno_quadrotor_rapps package</description>

  <maintainer email="samuel@dynorobotics.se">Samuel Lindgren</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <rocon_app>rapps/parcel_delivery/parcel_delivery.rapp</rocon_app>
  </export>
</package>
