<?xml version="1.0"?>
<package format="2">
  <name>dyno_teleop</name>
  <version>0.0.0</version>
  <description>The dyno_teleop package</description>

  <maintainer email="samuel@dynorobotics.se">Samuel Lindgren</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>joy</depend>

  <export>

  </export>
</package>
