<?xml version="1.0"?>
<package format="2">
  <name>dyno_unity</name>
  <version>0.0.1</version>
  <description>The dyno_unity package</description>

  <maintainer email="samuel@dynorobotics.se">Samuel Lindgren</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>controller_manager</depend>

  <export>

  </export>
</package>
