<?xml version="1.0"?>
<package format="2">
  <name>dyno_viz</name>
  <version>0.0.1</version>
  <description>The dyno_viz package</description>

  <maintainer email="samuel@dynorobotics.se">Samuel Lindgren</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rviz</exec_depend>
  <export>
  </export>
</package>
