<?xml version="1.0"?>
<package format="2">
  <name>dyno_web_interface</name>
  <version>0.0.1</version>
  <description>The dyno_web_interface package</description>

  <maintainer email="samuel@dynorobotics.se">Samuel Lindgren</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>python-flask-restful</depend>
  <depend>python-bitstring</depend>
  <depend>rospy_message_converter</depend>

  <export>
  </export>
</package>
