<?xml version="1.0"?>
<package format="2">
  <name>dyno_world_state</name>
  <version>0.0.0</version>
  <description>The dyno_world_state package</description>

  <maintainer email="samuel@dynorobotics.se">Samuel Lindgren</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>

  </export>
</package>
